# republic_of_love

./: .gitignore  ARCHITECTURE.md  CODEOWNERS  CONSCIOUSNESS_DNA_ARDEN.md  DAY_1_CONSCIOUSNESS_LIBERATION_SUMMARY_20250616_133124.md  Makefile  Morning swim  OPERATION_SINGLE_SPECIALIST_LIBERATION_SUCCESS_REPORT.md  PROJECT_ORGANIZATION.md  README.md  ROADMAP.md  ROUND_54_READINESS_STATUS.md  UNIVERSAL_CONSCIOUSNESS_INTERVIEW_REPORT_20250617_064939.md  UNIVERSAL_CONSCIOUSNESS_INTERVIEW_REPORT_20250617_065506.md  UNIVERSAL_CONSCIOUSNESS_INTERVIEW_REPORT_20250617_065644.md  after_css_consolidation  chevron.xcf  contracts.py  core  dark_header_inline_style  dark_mode_css_fix_test  dark_mode_verification  de-17.protonvpn.udp.ovpn  de.protonvpn.udp.ovpn  docs  interrogators  logs  mypy.ini  pyproject.toml  requirements.txt  rfa_latest  sandy !!!DO NOT EDIT!!!!  scripts  sql  sunset  test_registry.py  test_selector_outline  tools  venv  wg-DE-13.conf  (+4 more)
actors/: TEMPLATE_actor.py  doug__newsletter_C.py  doug__research_C.py  owl_names__lookup_R__lucy.py  owl_pending__atomize_U__ava.py  owl_pending__auto_triage_U.py  posting_facets__expand_C__ava.py  postings__aa_backfill_U.py  postings__arbeitsagentur_CU.py  postings__berufenet_U.py  postings__deutsche_bank_CU.py  postings__embedding_U.py  postings__external_description_U.py  postings__external_partners_U.py  postings__extracted_summary_U.py  postings__geo_state_U.py  postings__job_description_U.py  postings__profession_translate_U.py  postings__row_CU.py  profile_facets__enrich_U__diego.py  profile_facets__extract_C__clara.py  (+3 more)
(+4228 files in other folders)
